# BF

./: .gitignore  .travis.yml  BF.cabal  BF.hs  ChangeLog.md  LICENSE  PureBF.lhs  README.md
.github/workflows/: haskell-ci.yml
.hie/: BF.hie  BFKS.hie  Main.hie  PureBF.hie
app/: Main.hs
comonad/: Main.hs
ekmett/: Main.hs  Tape.hs
examples/: EKmett.hs  HandParser.hs  MachineBF.hs  NanoParsec.hs  NanoParser.hs  sierpinski.bf
src/: ;  BF.hs  BF2.hs  BFKS.hs  Main.hs  PureBF.lhs  Quchen.hs
