-- The name of the package.
name:                BF

-- The package version.  See the Haskell package versioning policy (PVP)
-- for standards guiding when and how versions should be incremented.
-- https://wiki.haskell.org/Package_versioning_policy
-- PVP summary:      +-+------- breaking API changes
--                   | | +----- non-breaking API additions
--                   | | | +--- code changes with no API change
version:             0.1.0.0

-- A short (one-line) description of the package.
synopsis:            Experiments with implementing the BrainFuck language in Haskell

-- A longer description of the package.
description:         Experiments with implementing the BrainFuck language in Haskell.  

-- URL for the project homepage or repository.
homepage:            https://github.com/jrp2014/BF

bug-reports:         https://github.com/jrp2014BF/issues

-- The license under which the package is released.
license:             BSD3

-- The file containing the license text.
license-file:        LICENSE

-- The package author(s).
author:              John Pavel

-- An email address to which users can send suggestions, bug reports, and
-- patches.
maintainer:          jrp@dial.pipex.com

-- A copyright notice.
-- copyright:

category:            Language

build-type:          Simple

stability:           experimental

-- extra files to be distributed with the package, such as examples or a
-- README.
extra-source-files:  ChangeLog.md, README.md, .gitignore

-- Constraint on the version of Cabal needed to build this package.
cabal-version:       >=1.10

source-repository     head
  type:               git
  location:           https://github.com/jrp2014/BF

library
  -- Modules exported by the library.
  exposed-modules:    BF, PureBF

  -- Modules included in this library but not exported.
  -- other-modules:

  -- LANGUAGE extensions used by modules in this package.
  -- other-extensions:

  -- Other library packages from which modules are imported.
  build-depends:       base >=4.11 && < 5,
                       comonad

  -- Directories containing source files.
  hs-source-dirs:      src

  -- Base language which the package is written in.
  default-language:    Haskell2010

  ghc-options:         -Wall -Wextra


executable BF
  -- .hs or .lhs file containing the Main module.
  main-is:             Main.hs

  -- Modules included in this executable, other than Main.
  other-modules:       BF, PureBF, BF2, NanoParsec

  -- LANGUAGE extensions used by modules in this package.
  -- other-extensions:

  -- Other library packages from which modules are imported.
  build-depends:       base >=4.11 && < 5,
                       comonad,
                       filepath

  -- Directories containing source files.
  hs-source-dirs:      src

  -- Base language which the package is written in.
  default-language:    Haskell2010

  ghc-options:         -Wall -Wextra

