cabal-version:   2.4
name:            BF
version:         0.1.0.0
synopsis:
  Experiments with implementing the BrainFuck language in Haskell

description:
  Experiments with implementing the BrainFuck language in Haskell.  

homepage:        https://github.com/jrp2014/BF
bug-reports:     https://github.com/jrp2014BF/issues
license:         (BSD-2-Clause OR Apache-2.0)
license-file:    LICENSE
author:          John Pavel
maintainer:      jrp2014@dial.pipex.com
category:        Language
build-type:      Simple
stability:       experimental
extra-doc-files:
  .gitignore
  ChangeLog.md
  README.md

tested-with:     GHC ==8.10.4

source-repository head
  type:     git
  location: https://github.com/jrp2014/BF

common common-options
  build-depends:    base ^>=4.14.1.0
  ghc-options:
    -Wall -Wcompat -Widentities -Wincomplete-uni-patterns
    -Wincomplete-record-updates -Wredundant-constraints
    -Wnoncanonical-monad-instances

  -- -O2

  if impl(ghc >=8.2)
    ghc-options: -fhide-source-paths

  if impl(ghc >=8.4)
    ghc-options: -Wmissing-export-lists -Wpartial-fields

  if impl(ghc >=8.8)
    ghc-options: -Wmissing-deriving-strategies -fwrite-ide-info -hiedir=.hie

  if impl(ghc >=8.10)
    ghc-options: -Wunused-packages

  default-language: Haskell2010

library
  import:          common-options
  exposed-modules:
    BF
    BFKS
    PureBF

  build-depends:
    , base        >=4.11 && <5
    , comonad
    , containers
    , mtl
    , trifecta

  hs-source-dirs:  src

executable BF
  import:         common-options
  main-is:        Main.hs
  other-modules:
    BF
    BFKS
    PureBF

  build-depends:
    , base        >=4.11 && <5
    , comonad
    , containers
    , filepath
    , mtl
    , trifecta

  hs-source-dirs: src
